--- a/templates/stakingServices.html
+++ b/templates/stakingServices.html
@@ -232,7 +232,20 @@
                     </td>
                   </tr>
                   <tr>
-                    <td data-column="Service"><a href="https://atomicwallet.io">Atomic Wallet</a></td>
+                    <td data-column="Service"><a href="https://app.aquapatina.com/launch/">Aqua Patina</a></td>
+                    <td data-column="No Supermajority client" style="text-align: center;">✅</td>
+                    <td data-column="Validator key owner">Service</td>
+                    <td data-column="Withdrawal key owner">Service</td>
+                    <td data-column="Pool token">Yes</td>
+                    <td data-column="3rd Party Software">No</td>
+                    <td data-column="Min. Stake">Any amount</td>
+                    <td data-column="Fee">4% of rewards</td>
+                    <td data-column="Open Source">Yes</td>
+                    <td data-column="Social">
+                      <a href="https://beacons.ai/aquapatina" target="_blank"><i class="fab fa-discord ml-1 mr-1"></i></a><a href="https://www.twitter.com/aquapatina/" target="_blank"><i class="fab fa-twitter ml-1 mr-1"></i></a><a href="https://t.me/AquaPatina_Chat" target="_blank"><i class="fab fa-telegram ml-1 mr-1"></i></a><a class="fa fa-mail-bulk ml-1 mr-1"></i></a>
+                    </td>
+                  </tr>
+                  <tr><td data-column="Service"><a href="https://atomicwallet.io">Atomic Wallet</a></td>
                     <td data-column="No Supermajority client" style="text-align: center;">❓</td>
                     <td data-column="Validator key owner">?</td>
                     <td data-column="Withdrawal key owner">?</td>
